test trierAlbum